# WarehouseSimulator

./: .gitignore  README.md
design/ObjectiveStorageModel/: CMakeLists.txt  ObjectiveStorageModel.qmlproject  ObjectiveStorageModel.qmlproject.qtds  qmlmodules
documentation/html/: accesspolicies_8h.html  accesspolicies_8h_source.html  annotated.html  class_click_handler-members.html  class_click_handler.html  class_gamepad-members.html  class_gamepad.html  class_gaming_console-members.html  class_gaming_console.html  class_image_helper-members.html  class_image_helper.html  class_keyboard-members.html  class_keyboard.html  class_main_window-members.html  class_main_window.html  class_product-members.html  class_product.html  class_product_creator-members.html  class_product_creator.html  class_product_factory-members.html  class_product_factory.html  class_product_widget-members.html  class_product_widget.html  class_storage_box-members.html  class_storage_box.html  class_t_v-members.html  class_t_v.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1_product_creator-members.html  class_ui_1_1_product_creator.html  class_ui_1_1test-members.html  class_ui_1_1test.html  class_ui___main_window-members.html  class_ui___main_window.html  class_ui___product_creator-members.html  class_ui___product_creator.html  class_ui__test-members.html  class_ui__test.html  class_wardrobe-members.html  (+69 more)
documentation/latex/: accesspolicies_8h.tex  accesspolicies_8h_source.tex  annotated.tex  class_click_handler.eps  class_click_handler.tex  class_gamepad.eps  class_gamepad.tex  (+61 more)
src/WarehouseSimulator/: CMakeLists.txt  main.cpp
src/WarehouseSimulator/businessLogic/: gamepad.cpp  gamepad.h  gamingconsole.cpp  gamingconsole.h  keyboard.cpp  keyboard.h  product.cpp  product.h  productsize.h  storagebox.cpp  storagebox.h  tv.cpp  tv.h  wardrobe.cpp  wardrobe.h
src/WarehouseSimulator/businessLogic/enums/: accesspolicies.h  products.h  sizes.h
src/WarehouseSimulator/businessLogic/helpers/: imagehelper.cpp  imagehelper.h
src/WarehouseSimulator/businessLogic/products/: gamepad.cpp  gamepad.h  gamingconsole.cpp  gamingconsole.h  keyboard.cpp  keyboard.h  product.cpp  product.h  productfactory.cpp  productfactory.h  tv.cpp  tv.h
src/WarehouseSimulator/businessLogic/warehouse/: fifowardrobe.cpp  fifowardrobe.h  lifowardrobe.cpp  lifowardrobe.h  storagebox.cpp  storagebox.h  wardrobe.h
src/WarehouseSimulator/qtWidgetUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  productcreator.cpp  productcreator.h  productcreator.ui
src/WarehouseSimulator/qtWidgetUI/customWidgets/: productButton.cpp  productButton.h  productwidget.cpp  productwidget.h
src/WarehouseSimulator/qtWidgetUI/events/: clickhandler.h
(+51 files in other folders)
